Next version (tbd):
-------------------

(Changes that can break existing programs are marked with a "*")

### Compiler user-interface and warnings:

- PR#7315, GPR#736: refine some error locations
  (Gabriel Scherer and Alain Frisch, report by Matej Košík)

- GPR#829: better error when opening a module aliased to a functor
  (Alain Frisch)

- MPR#7050, GPR#748 GPR#843: new `-args/-args0 <file>` parameters to provide
  extra command-line arguments in a file -- see documentation.
  User programs may implement similar options using the new `Expand`
  constructor of the `Arg` module.
  (Bernhard Schommer, review by Jérémie Dimino, Gabriel Scherer
   and Damien Doligez, discussion with Alain Frisch and Xavier Leroy,
   feature request from the Coq team)

### Standard library:

- GPR#760: Add a functions List.compare_lengths and
  List.compare_length_with to avoid full list length computations
  (Fabrice Le Fessant)

### Tools:

- PR#7333: ocamldoc, use the first sentence of text file as
  a short description in overviews.
  (Florian Angeletti)

### Compiler distribution build system:

- PR#7377: remove -std=gnu99 for newer gcc versions
  (Damien Doligez, report by ygrek)

- GPR#729: Make sure ocamlnat is built with a $(EXE) extension, merge
  rules between Unix and Windows Makefiles
  (Sébastien Hinderer, review by Alain Frisch)

- GPR#762, GPR#764: Merge Unix and Windows Makefiles in yacc/ and
  debugger/
  (Sébastien Hinderer)

- GPR#827: install missing mli and cmti files, new make target
  install-compiler-sources for installation of compiler-libs ml files
  (Hendrik Tews)

### Internal/compiler-libs changes:

- GPR#744, GPR#781: fix duplicate self-reference in imported cmi_crcs
  list in .cmti files + avoid rebuilding cmi_info record when creating
  .cmti files
  (Alain Frisch, report by Daniel Bunzli, review by Jeremie Dimino)

### Other libraries:

- MPR#7339, GPR#787: Support the '0 dimension' case for bigarrays
  (see Bigarray documentation)
  (Laurent Mazare,